--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -14,7 +14,7 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v6
+        uses: actions/checkout@v5
         with:
           fetch-depth: 0
           fetch-tags: true
@@ -33,16 +33,15 @@ jobs:
       - name: Get last release commit
         id: last_commit
         run: |
-          LAST_RELEASE_TAG="${{ steps.current_version.outputs.current }}"
-          LAST_RELEASE_COMMIT=$(git rev-parse "$LAST_RELEASE_TAG")
-          echo "commit=$LAST_RELEASE_COMMIT" >> $GITHUB_OUTPUT
+          LAST_RELEASE_DATE=$(git show -s --format=%cI "${{ steps.current_version.outputs.current }}")
+          echo "date=$LAST_RELEASE_DATE" >> $GITHUB_OUTPUT
 
       - name: Get merged PRs since last release
         id: get_prs
         uses: actions/github-script@v7
         with:
           script: |
-            const lastReleaseCommit = '${{ steps.last_commit.outputs.commit }}';
+            const lastReleaseDate = '${{ steps.last_commit.outputs.date }}';
 
             // Get merged PRs
             const { data: prs } = await github.rest.pulls.list({
@@ -55,7 +54,7 @@ jobs:
 
             // Filter and process PRs
             const mergedPrs = prs
-              .filter(pr => pr.merged_at && pr.merge_commit_sha !== lastReleaseCommit)
+              .filter(pr => pr.merged_at && new Date(pr.merged_at) > new Date(lastReleaseDate))
               .map(pr => ({
                 number: pr.number,
                 title: pr.title,
