--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "source.fixAll.eslint": "explicit",
     "source.organizeImports": "always"
   },
+
   // a macro to rename a variable to _variable
   "macros": {
     "rename_": [
@@ -24,9 +25,8 @@
           "  pos,",
           "  newName",
           ");",
-          "if (edit) {",
-          "  await vscode.workspace.applyEdit(edit);",
-          "}"
+          "if (edit) await vscode.workspace.applyEdit(edit);",
+          "await vscode.commands.executeCommand('workbench.action.files.saveAll');"
         ]
       }
     ]
