--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,31 +3,31 @@
     "source.fixAll.eslint": "explicit",
     "source.organizeImports": "always"
   },
+  "editor.rename.enablePreview": false,
 
   // a macro to rename a variable to _variable
   "macros": {
     "rename_": [
       {
         "javascript": [
-          "const ed = vscode.window.activeTextEditor;",
-          "if (!ed) return;",
+          "const ed = vscode.window.activeTextEditor; if (!ed) return;",
           "const pos = ed.selection.active;",
-          "const rng = ed.document.getWordRangeAtPosition(pos);",
-          "if (!rng) return;",
-          "const oldName = ed.document.getText(rng);",
-          "// if it already starts with '_', do nothing (remove this guard if you always want to re-run)",
-          "if (oldName.startsWith('_')) return;",
+          "const rng = ed.document.getWordRangeAtPosition(pos); if (!rng) return;",
+          "const oldName = ed.document.getText(rng); if (oldName.startsWith('_')) return;",
           "const newName = '_' + oldName;",
-          "// Ask VS Code for a rename edit at this position",
-          "const edit = await vscode.commands.executeCommand(",
-          "  'vscode.executeDocumentRenameProvider',",
-          "  ed.document.uri,",
-          "  pos,",
-          "  newName",
-          ");",
-          "if (edit) await vscode.workspace.applyEdit(edit);",
-          "await new Promise(resolve => setTimeout(resolve, 100));",
-          "await vscode.commands.executeCommand('workbench.action.files.saveAll');"
+          "const edit = await vscode.commands.executeCommand('vscode.executeDocumentRenameProvider', ed.document.uri, pos, newName);",
+          "if (!edit) return;",
+          "await vscode.workspace.applyEdit(edit);",
+          "(async () => {",
+          "  for (let attempt = 0; attempt < 5; attempt++) {",
+          "    let remaining = 0;",
+          "    for (const doc of vscode.workspace.textDocuments) {",
+          "      try { if (doc.isDirty) { remaining++; await doc.save(); } } catch (_) {}",
+          "    }",
+          "    if (remaining === 0) break;",
+          "    await new Promise(r => setTimeout(r, 80));",
+          "  }",
+          "})();"
         ]
       }
     ]
